fixed z-index ordering of look editor elements

--- a/apparelrow/sass/src/partials/_application.sass
+++ b/apparelrow/sass/src/partials/_application.sass
@@ -68,7 +68,7 @@ button
   top: 50%
   left: 50%
   +single-box-shadow(rgba(0, 0, 0, 0.23), 0, 0, 10px)
-  z-index: 10099
+  z-index: 10090
   .header
     height: 40px
     line-height: 40px
@@ -2215,5 +2215,5 @@ body.settings, body.about
   position: fixed
   right: 0
   top: 180px
-  z-index: 99999
+  z-index: 999999
   cursor: pointer
