--- a/apparelrow/sass/src/partials/_sticky.sass
+++ b/apparelrow/sass/src/partials/_sticky.sass
@@ -1,7 +1,7 @@
 .sticky-queue
   position: fixed
   width: 264px
-  z-index: 9999
+  z-index: 999990
   top: 30px
   right: 30px
   .sticky
